objects/CZDocusignDataEnricherConfig__mdt.object
<CustomObject>
    <description>Metadata for datapoints required for Docusign Data Enrichment</description>
    <fields>
        <fullName>FieldList__c</fullName>
        <description>Field List</description>
        <label>Field List</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantRole__c</fullName>
        <description>Participant Role</description>
        <label>Participant Role</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateCode__c</fullName>
        <description>Disclosure Template Code</description>
        <label>Disclosure Template Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Docusign Data Enrichment Config</label>
    <pluralLabel>Docusign Data Enrichment Config</pluralLabel>
</CustomObject>